--- a/Normalized_Spatial_Temporal_GNNDroughtPrediction200k_V2.ipynb
+++ b/Normalized_Spatial_Temporal_GNNDroughtPrediction200k_V2.ipynb
@@ -1341,7 +1341,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 245
+          "height": 256
         },
         "id": "zPuGkK3RmJf8",
         "outputId": "cade5733-e63b-461f-d8be-c4b676e5f806"
@@ -2579,7 +2579,7 @@
         "id": "CnyWRT0sfmV-",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 193
+          "height": 182
         },
         "outputId": "d7894ceb-4826-4276-869d-9f6c908fd6aa"
       },
@@ -2607,7 +2607,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 350
+          "height": 349
         },
         "id": "Vauk0LQaCtk5",
         "outputId": "4c8d10b0-2842-4c1e-fc9f-1c50114c9078"
@@ -3182,7 +3182,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 635
+          "height": 634
         },
         "id": "v0nnzmL8Rfdc",
         "outputId": "167df87e-0d09-409c-c2fc-2085d6140266"
@@ -3863,7 +3863,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 635
+          "height": 634
         },
         "id": "f_P6IjIOZos_",
         "outputId": "0b691995-5e1b-4c98-9302-b3ef29131492"
@@ -9869,11 +9869,11 @@
         "print(\"Graph density:\", nx.density(Graph))"
       ],
       "metadata": {
-        "id": "vPX03nFtkeiz",
-        "outputId": "a42536e7-2f43-4596-8a49-a0bab2e4d269",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vPX03nFtkeiz",
+        "outputId": "a42536e7-2f43-4596-8a49-a0bab2e4d269"
       },
       "execution_count": 148,
       "outputs": [
@@ -9932,11 +9932,11 @@
         "print(dfym_row[\"row_index\"])"
       ],
       "metadata": {
-        "id": "tWVKsHwlfWpA",
-        "outputId": "193c43ba-1247-4865-d958-fc7064fb4c01",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tWVKsHwlfWpA",
+        "outputId": "193c43ba-1247-4865-d958-fc7064fb4c01"
       },
       "execution_count": 150,
       "outputs": [
@@ -9966,12 +9966,12 @@
         "display_nodes(Spatial_temporal_graph, dfym_row, \"Month\")"
       ],
       "metadata": {
-        "id": "gn5kk3PUfMOo",
-        "outputId": "14647d8c-aadf-47d4-ea40-41342ea6f15a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 582
-        }
+          "height": 611
+        },
+        "id": "gn5kk3PUfMOo",
+        "outputId": "14647d8c-aadf-47d4-ea40-41342ea6f15a"
       },
       "execution_count": 159,
       "outputs": [
@@ -10022,7 +10022,7 @@
         "id": "_ie7YmNO9nma",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 552
+          "height": 559
         },
         "outputId": "51527ced-9960-49b0-cc24-e85c0025685e"
       },
@@ -10052,6 +10052,43 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "def create_edge_list(graph, df_nodes):\n",
+        "    \"\"\"\n",
+        "    Create a list of edge connections based on the graph and a DataFrame of nodes.\n",
+        "\n",
+        "    :param graph: A NetworkX graph object.\n",
+        "    :param df_nodes: A DataFrame containing node information, indexed by node identifiers.\n",
+        "    :return: A list of tuples, where each tuple represents an edge (node1_index, node2_index).\n",
+        "    \"\"\"\n",
+        "    edge_list = []\n",
+        "    for edge in graph.edges():\n",
+        "        node1, node2 = edge\n",
+        "        # Check if both nodes are in the DataFrame\n",
+        "        if node1 in df_nodes.index and node2 in df_nodes.index:\n",
+        "            node1_index = df_nodes.index.get_loc(node1)\n",
+        "            node2_index = df_nodes.index.get_loc(node2)\n",
+        "            edge_list.append((node1_index, node2_index))\n",
+        "\n",
+        "    return edge_list\n",
+        "\n",
+        "# Example usage\n",
+        "# Assuming you have a graph 'G' and a DataFrame 'df_nodes'\n",
+        "# G = nx.Graph()  # Or however your graph is created\n",
+        "# df_nodes = pd.DataFrame(...)  # Your DataFrame of nodes\n",
+        "\n",
+        "# connections = create_edge_list(G, df_nodes)\n"
+      ],
+      "metadata": {
+        "id": "HpYQ3QM_eBmB"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -10139,12 +10176,12 @@
         "df0=display_nodes_map(Spatial_temporal_graph, dfym_row, \"Month\",0)"
       ],
       "metadata": {
-        "id": "AJexoU4bg2fW",
-        "outputId": "0cd435af-b280-4bd3-8db6-36daf2dafa04",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 617
-        }
+          "height": 648
+        },
+        "id": "AJexoU4bg2fW",
+        "outputId": "0cd435af-b280-4bd3-8db6-36daf2dafa04"
       },
       "execution_count": 162,
       "outputs": [
@@ -10177,12 +10214,12 @@
         "df1=display_nodes_map(Spatial_temporal_graph, dfym_row, \"Month\",1)"
       ],
       "metadata": {
-        "id": "CkEbACEAmTJs",
-        "outputId": "0ca12039-7c43-4e6c-96a1-b89ab60b7723",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 617
-        }
+          "height": 648
+        },
+        "id": "CkEbACEAmTJs",
+        "outputId": "0ca12039-7c43-4e6c-96a1-b89ab60b7723"
       },
       "execution_count": 163,
       "outputs": [
@@ -10215,12 +10252,12 @@
         "df2=display_nodes_map(Spatial_temporal_graph, dfym_row, \"Month\",2)"
       ],
       "metadata": {
-        "id": "l4a2HvZ6mYW9",
-        "outputId": "eb7f2b74-d502-465c-ea59-c5a907f445f7",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 617
-        }
+          "height": 648
+        },
+        "id": "l4a2HvZ6mYW9",
+        "outputId": "eb7f2b74-d502-465c-ea59-c5a907f445f7"
       },
       "execution_count": 164,
       "outputs": [
@@ -10253,12 +10290,12 @@
         "df3=display_nodes_map(Spatial_temporal_graph, dfym_row, \"Month\",3)"
       ],
       "metadata": {
-        "id": "imAposHemb6F",
-        "outputId": "be77844b-c37d-4879-8c3d-b8945b02a834",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 617
-        }
+          "height": 648
+        },
+        "id": "imAposHemb6F",
+        "outputId": "be77844b-c37d-4879-8c3d-b8945b02a834"
       },
       "execution_count": 165,
       "outputs": [
@@ -10291,12 +10328,12 @@
         "df4=display_nodes_map(Spatial_temporal_graph, dfym_row, \"Month\",4)"
       ],
       "metadata": {
-        "id": "G1gpdtbFmfh9",
-        "outputId": "2fc6cbd7-b925-41f2-c33b-9f93e6d469cb",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 617
-        }
+          "height": 648
+        },
+        "id": "G1gpdtbFmfh9",
+        "outputId": "2fc6cbd7-b925-41f2-c33b-9f93e6d469cb"
       },
       "execution_count": 166,
       "outputs": [
@@ -10329,12 +10366,12 @@
         "df5=display_nodes_map(Spatial_temporal_graph, dfym_row, \"Month\",5)"
       ],
       "metadata": {
-        "id": "pHPFH9-qmikM",
-        "outputId": "6d22d4d1-7f18-4d98-ea2d-195466dbf947",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 617
-        }
+          "height": 648
+        },
+        "id": "pHPFH9-qmikM",
+        "outputId": "6d22d4d1-7f18-4d98-ea2d-195466dbf947"
       },
       "execution_count": 167,
       "outputs": [
@@ -10367,12 +10404,12 @@
         "df6=display_nodes_map(Spatial_temporal_graph, dfym_row, \"Month\",6)"
       ],
       "metadata": {
-        "id": "4sbG-rHvm28S",
-        "outputId": "34ca9673-9327-480a-cca7-7158f472b322",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 617
-        }
+          "height": 648
+        },
+        "id": "4sbG-rHvm28S",
+        "outputId": "34ca9673-9327-480a-cca7-7158f472b322"
       },
       "execution_count": 168,
       "outputs": [
@@ -10405,12 +10442,12 @@
         "dfh=display_nodes_map_gt(Spatial_temporal_graph, dfym_row, \"Month\",6)"
       ],
       "metadata": {
-        "id": "3ufEXm_apu4g",
-        "outputId": "dac0e84c-b247-4cf9-9fbf-e0a286f2bc72",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 617
-        }
+          "height": 648
+        },
+        "id": "3ufEXm_apu4g",
+        "outputId": "dac0e84c-b247-4cf9-9fbf-e0a286f2bc72"
       },
       "execution_count": 169,
       "outputs": [
@@ -10508,7 +10545,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 583
+          "height": 585
         },
         "id": "hYXT2tik_GAT",
         "outputId": "c1131b45-b4c9-43ef-f237-e71eec9ddf72"
@@ -10588,12 +10625,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "lX_Itj-Atusq",
-        "outputId": "47474aaa-c02c-4298-f331-a448489f4a5a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 583
-        }
+          "height": 585
+        },
+        "id": "lX_Itj-Atusq",
+        "outputId": "47474aaa-c02c-4298-f331-a448489f4a5a"
       },
       "execution_count": 173,
       "outputs": [
@@ -10616,6 +10653,56 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "import geopandas as gpd\n",
+        "from shapely.geometry import Point, LineString\n",
+        "\n",
+        "# ... [your existing code to create gdf0, gdf1, ..., gdfh] ...\n",
+        "\n",
+        "# Example connections: list of tuples representing connected points\n",
+        "# Replace this with your actual connections data\n",
+        "# Example: [(0, 1), (1, 2)] means connect point 0 to point 1, and point 1 to point 2\n",
+        "connections = [(0, 1), (1, 2), ...]\n",
+        "\n",
+        "# Load world map and filter for Africa\n",
+        "world = gpd.read_file(gpd.datasets.get_path('naturalearth_lowres'))\n",
+        "africa = world[world['continent'] == 'Africa']\n",
+        "\n",
+        "# Create a single plot\n",
+        "fig, ax = plt.subplots(figsize=(10, 6))\n",
+        "africa.plot(ax=ax)\n",
+        "\n",
+        "# Plot each GeoDataFrame\n",
+        "# ... [your existing code to plot gdf0, gdf1, ..., gdfh] ...\n",
+        "\n",
+        "# Function to draw a line between two points\n",
+        "def draw_line(ax, gdf, point_index_1, point_index_2):\n",
+        "    point1 = gdf.iloc[point_index_1].geometry\n",
+        "    point2 = gdf.iloc[point_index_2].geometry\n",
+        "    line = LineString([point1, point2])\n",
+        "    ax.plot(*line.xy, color='black')\n",
+        "\n",
+        "# Draw lines for each connection\n",
+        "for gdf in [gdf0, gdf1, ..., gdfh]:  # Replace with your list of GeoDataFrames\n",
+        "    for connection in connections:\n",
+        "        draw_line(ax, gdf, *connection)\n",
+        "\n",
+        "# Adjust the plot to focus on Africa\n",
+        "ax.set_xlim([-20, 60])\n",
+        "ax.set_ylim([-40, 40])\n",
+        "\n",
+        "# Show the plot\n",
+        "plt.show()\n"
+      ],
+      "metadata": {
+        "id": "sDm4but3c7XN"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -15726,7 +15813,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 510
+          "height": 536
         },
         "id": "_tGX6o_iPlE_",
         "outputId": "8b47f908-941c-4d36-8bd0-1f5e5ec009e1"
@@ -15755,7 +15842,7 @@
         "outputId": "2ee9f64e-6ea3-4367-fa7c-3996f3da0152",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 510
+          "height": 536
         }
       },
       "execution_count": 177,
@@ -20885,11 +20972,11 @@
         "df0=generate_nodes_degree_df(Spatial_temporal_graph, dfym_row, \"Month\",0,\"eq\")"
       ],
       "metadata": {
-        "id": "Xy5yxm0IRPUu",
-        "outputId": "28fe9249-9243-4577-9ffa-47aa6ed74df5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Xy5yxm0IRPUu",
+        "outputId": "28fe9249-9243-4577-9ffa-47aa6ed74df5"
       },
       "execution_count": 180,
       "outputs": [
@@ -20920,11 +21007,11 @@
         "# df_list now contains 10 dataframes with the required specifications\n"
       ],
       "metadata": {
-        "id": "P9XEZktzUBtB",
-        "outputId": "c4729ccc-319b-4294-b9eb-d3bbe7c7a3e3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "P9XEZktzUBtB",
+        "outputId": "c4729ccc-319b-4294-b9eb-d3bbe7c7a3e3"
       },
       "execution_count": 181,
       "outputs": [
@@ -21038,12 +21125,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "w0dYhHIuYxL3",
-        "outputId": "6053d4b3-5972-4f62-b882-edffab086263",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 583
-        }
+          "height": 585
+        },
+        "id": "w0dYhHIuYxL3",
+        "outputId": "6053d4b3-5972-4f62-b882-edffab086263"
       },
       "execution_count": 182,
       "outputs": [
@@ -22101,7 +22188,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 510
+          "height": 536
         },
         "id": "82C5l5TFiYLc",
         "outputId": "33226c29-0b71-4fc1-a6c9-319828e05f82"
@@ -22128,7 +22215,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 510
+          "height": 536
         },
         "id": "NABUuDfZiYgP",
         "outputId": "6142d135-802b-449f-b4c2-9b4c48d31299"
@@ -22239,11 +22326,11 @@
         "    print(f\"Degree {degree}: {degree_counts[degree]}\")\n"
       ],
       "metadata": {
-        "id": "xTW7G4hN0gY2",
-        "outputId": "b26ae0a9-c019-453f-bf03-eda54549ac24",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xTW7G4hN0gY2",
+        "outputId": "b26ae0a9-c019-453f-bf03-eda54549ac24"
       },
       "execution_count": 192,
       "outputs": [
@@ -22305,11 +22392,11 @@
         "print(\"Graph density:\", nx.density(Graph))\n"
       ],
       "metadata": {
-        "id": "RnN2swV51DxU",
-        "outputId": "60d1f1b0-c1ba-42d9-9b20-24bc718f0c55",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "RnN2swV51DxU",
+        "outputId": "60d1f1b0-c1ba-42d9-9b20-24bc718f0c55"
       },
       "execution_count": 194,
       "outputs": [
@@ -22370,12 +22457,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "BMAJ7vX8eQ_p",
-        "outputId": "50b0c78b-b2f0-403a-a038-31431446fbf6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "BMAJ7vX8eQ_p",
+        "outputId": "50b0c78b-b2f0-403a-a038-31431446fbf6"
       },
       "execution_count": 195,
       "outputs": [
@@ -22443,7 +22530,7 @@
         "outputId": "cf5252f8-ad9e-40e2-a245-35df0ba1a3dd",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 510
+          "height": 536
         }
       },
       "execution_count": 197,
